# market-data-mcp

./: .env.example  .gitignore  BITACORA.md  Dockerfile  GLAMA_PUBLISH.md  README.md  glama.json  pyproject.toml  requirements.txt
evals/: market_data_eval.xml
market_data_mcp/: __init__.py  __main__.py  analyze.py  cache.py  formatting.py  result.py  server.py
market_data_mcp/sources/: __init__.py  broker.py  calendar.py  news.py  quote.py  scan.py
tests/: test_smoke.py
