[project]
name = "market-data-mcp"
version = "0.1.0"
description = "Real-time market data: quotes, news, earnings calendar and a watchlist scanner for AI agents, backed by Finnhub."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.scripts]
market-data-mcp = "market_data_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["market_data_mcp*"]
